libiec61131parser/IEC61131Parser.cpp

// Generated from IEC61131.g4 by ANTLR 4.7


#include "IEC61131Listener.h"

#include "IEC61131Parser.h"


using namespace antlrcpp;
using namespace antlr4;

IEC61131Parser::IEC61131Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

IEC61131Parser::~IEC61131Parser() {
  delete _interpreter;
}

std::string IEC61131Parser::getGrammarFileName() const {
  return "IEC61131.g4";
}

const std::vector<std::string>& IEC61131Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& IEC61131Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Var_block_globalContext ------------------------------------------------------------------

IEC61131Parser::Var_block_globalContext::Var_block_globalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<IEC61131Parser::Variable_declarationContext *> IEC61131Parser::Var_block_globalContext::variable_declaration() {
  return getRuleContexts<IEC61131Parser::Variable_declarationContext>();
}

IEC61131Parser::Variable_declarationContext* IEC61131Parser::Var_block_globalContext::variable_declaration(size_t i) {
  return getRuleContext<IEC61131Parser::Variable_declarationContext>(i);
}


size_t IEC61131Parser::Var_block_globalContext::getRuleIndex() const {
  return IEC61131Parser::RuleVar_block_global;
}

void IEC61131Parser::Var_block_globalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_block_global(this);
}

void IEC61131Parser::Var_block_globalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_block_global(this);
}

IEC61131Parser::Var_block_globalContext* IEC61131Parser::var_block_global() {
  Var_block_globalContext *_localctx = _tracker.createInstance<Var_block_globalContext>(_ctx, getState());
  enterRule(_localctx, 0, IEC61131Parser::RuleVar_block_global);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    match(IEC61131Parser::T__0);

    setState(30);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == IEC61131Parser::ID) {
      setState(27);
      dynamic_cast<Var_block_globalContext *>(_localctx)->variable_declarationContext = variable_declaration();
      dynamic_cast<Var_block_globalContext *>(_localctx)->variables.push_back(dynamic_cast<Var_block_globalContext *>(_localctx)->variable_declarationContext);
      setState(32);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(33);
    match(IEC61131Parser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_blockContext ------------------------------------------------------------------

IEC61131Parser::Var_blockContext::Var_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<IEC61131Parser::Variable_declarationContext *> IEC61131Parser::Var_blockContext::variable_declaration() {
  return getRuleContexts<IEC61131Parser::Variable_declarationContext>();
}

IEC61131Parser::Variable_declarationContext* IEC61131Parser::Var_blockContext::variable_declaration(size_t i) {
  return getRuleContext<IEC61131Parser::Variable_declarationContext>(i);
}


size_t IEC61131Parser::Var_blockContext::getRuleIndex() const {
  return IEC61131Parser::RuleVar_block;
}

void IEC61131Parser::Var_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_block(this);
}

void IEC61131Parser::Var_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_block(this);
}

IEC61131Parser::Var_blockContext* IEC61131Parser::var_block() {
  Var_blockContext *_localctx = _tracker.createInstance<Var_blockContext>(_ctx, getState());
  enterRule(_localctx, 2, IEC61131Parser::RuleVar_block);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IEC61131Parser::T__2: {
        setState(35);
        match(IEC61131Parser::T__2);
        break;
      }

      case IEC61131Parser::T__3: {
         dynamic_cast<Var_blockContext *>(_localctx)->input = true; 
        setState(37);
        match(IEC61131Parser::T__3);
        break;
      }

      case IEC61131Parser::T__4: {
         dynamic_cast<Var_blockContext *>(_localctx)->output = true; 
        setState(39);
        match(IEC61131Parser::T__4);
        break;
      }

      case IEC61131Parser::T__5: {
         dynamic_cast<Var_blockContext *>(_localctx)->input = _localctx->output=true; 
        setState(41);
        match(IEC61131Parser::T__5);
        break;
      }

      case IEC61131Parser::T__6: {
         dynamic_cast<Var_blockContext *>(_localctx)->temp = true; 
        setState(43);
        match(IEC61131Parser::T__6);
        break;
      }

    default:
      throw NoViableAltException(this);
    }

    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == IEC61131Parser::ID) {
      setState(46);
      dynamic_cast<Var_blockContext *>(_localctx)->variable_declarationContext = variable_declaration();
      dynamic_cast<Var_blockContext *>(_localctx)->variables.push_back(dynamic_cast<Var_blockContext *>(_localctx)->variable_declarationContext);
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(IEC61131Parser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_ruleContext ------------------------------------------------------------------

IEC61131Parser::Type_ruleContext::Type_ruleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IEC61131Parser::Type_ruleContext::getRuleIndex() const {
  return IEC61131Parser::RuleType_rule;
}

void IEC61131Parser::Type_ruleContext::copyFrom(Type_ruleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SimpleTypeContext ------------------------------------------------------------------

tree::TerminalNode* IEC61131Parser::SimpleTypeContext::ID() {
  return getToken(IEC61131Parser::ID, 0);
}

IEC61131Parser::SimpleTypeContext::SimpleTypeContext(Type_ruleContext *ctx) { copyFrom(ctx); }

void IEC61131Parser::SimpleTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleType(this);
}
void IEC61131Parser::SimpleTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleType(this);
}
//----------------- ArrayTypeContext ------------------------------------------------------------------

IEC61131Parser::Array_typeContext* IEC61131Parser::ArrayTypeContext::array_type() {
  return getRuleContext<IEC61131Parser::Array_typeContext>(0);
}

IEC61131Parser::ArrayTypeContext::ArrayTypeContext(Type_ruleContext *ctx) { copyFrom(ctx); }

void IEC61131Parser::ArrayTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayType(this);
}
void IEC61131Parser::ArrayTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayType(this);
}
//----------------- PointerTypeContext ------------------------------------------------------------------

IEC61131Parser::Pointer_typeContext* IEC61131Parser::PointerTypeContext::pointer_type() {
  return getRuleContext<IEC61131Parser::Pointer_typeContext>(0);
}

IEC61131Parser::PointerTypeContext::PointerTypeContext(Type_ruleContext *ctx) { copyFrom(ctx); }

void IEC61131Parser::PointerTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPointerType(this);
}
void IEC61131Parser::PointerTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPointerType(this);
}
IEC61131Parser::Type_ruleContext* IEC61131Parser::type_rule() {
  Type_ruleContext *_localctx = _tracker.createInstance<Type_ruleContext>(_ctx, getState());
  enterRule(_localctx, 4, IEC61131Parser::RuleType_rule);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IEC61131Parser::ID: {
        _localctx = dynamic_cast<Type_ruleContext *>(_tracker.createInstance<IEC61131Parser::SimpleTypeContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(54);
        dynamic_cast<SimpleTypeContext *>(_localctx)->name = match(IEC61131Parser::ID);
        break;
      }

      case IEC61131Parser::T__7: {
        _localctx = dynamic_cast<Type_ruleContext *>(_tracker.createInstance<IEC61131Parser::ArrayTypeContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(55);
        dynamic_cast<ArrayTypeContext *>(_localctx)->array = array_type();
        break;
      }

      case IEC61131Parser::T__13: {
        _localctx = dynamic_cast<Type_ruleContext *>(_tracker.createInstance<IEC61131Parser::PointerTypeContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(56);
        dynamic_cast<PointerTypeContext *>(_localctx)->pointer = pointer_type();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Array_typeContext ------------------------------------------------------------------

IEC61131Parser::Array_typeContext::Array_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<IEC61131Parser::RangeContext *> IEC61131Parser::Array_typeContext::range() {
  return getRuleContexts<IEC61131Parser::RangeContext>();
}

IEC61131Parser::RangeContext* IEC61131Parser::Array_typeContext::range(size_t i) {
  return getRuleContext<IEC61131Parser::RangeContext>(i);
}

IEC61131Parser::Type_ruleContext* IEC61131Parser::Array_typeContext::type_rule() {
  return getRuleContext<IEC61131Parser::Type_ruleContext>(0);
}


size_t IEC61131Parser::Array_typeContext::getRuleIndex() const {
  return IEC61131Parser::RuleArray_type;
}

void IEC61131Parser::Array_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArray_type(this);
}

void IEC61131Parser::Array_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArray_type(this);
}

IEC61131Parser::Array_typeContext* IEC61131Parser::array_type() {
  Array_typeContext *_localctx = _tracker.createInstance<Array_typeContext>(_ctx, getState());
  enterRule(_localctx, 6, IEC61131Parser::RuleArray_type);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(IEC61131Parser::T__7);
    setState(60);
    match(IEC61131Parser::T__8);
    setState(61);
    dynamic_cast<Array_typeContext *>(_localctx)->rangeContext = range();
    dynamic_cast<Array_typeContext *>(_localctx)->ranges.push_back(dynamic_cast<Array_typeContext *>(_localctx)->rangeContext);
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == IEC61131Parser::T__9) {
      setState(62);
      match(IEC61131Parser::T__9);
      setState(63);
      dynamic_cast<Array_typeContext *>(_localctx)->rangeContext = range();
      dynamic_cast<Array_typeContext *>(_localctx)->ranges.push_back(dynamic_cast<Array_typeContext *>(_localctx)->rangeContext);
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(69);
    match(IEC61131Parser::T__10);
    setState(70);
    match(IEC61131Parser::T__11);
    setState(71);
    dynamic_cast<Array_typeContext *>(_localctx)->type = type_rule();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RangeContext ------------------------------------------------------------------

IEC61131Parser::RangeContext::RangeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<IEC61131Parser::Integer_literalContext *> IEC61131Parser::RangeContext::integer_literal() {
  return getRuleContexts<IEC61131Parser::Integer_literalContext>();
}

IEC61131Parser::Integer_literalContext* IEC61131Parser::RangeContext::integer_literal(size_t i) {
  return getRuleContext<IEC61131Parser::Integer_literalContext>(i);
}


size_t IEC61131Parser::RangeContext::getRuleIndex() const {
  return IEC61131Parser::RuleRange;
}

void IEC61131Parser::RangeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRange(this);
}

void IEC61131Parser::RangeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRange(this);
}

IEC61131Parser::RangeContext* IEC61131Parser::range() {
  RangeContext *_localctx = _tracker.createInstance<RangeContext>(_ctx, getState());
  enterRule(_localctx, 8, IEC61131Parser::RuleRange);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    dynamic_cast<RangeContext *>(_localctx)->lbound = integer_literal();
    setState(74);
    match(IEC61131Parser::T__12);
    setState(75);
    dynamic_cast<RangeContext *>(_localctx)->ubound = integer_literal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pointer_typeContext ------------------------------------------------------------------

IEC61131Parser::Pointer_typeContext::Pointer_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IEC61131Parser::Type_ruleContext* IEC61131Parser::Pointer_typeContext::type_rule() {
  return getRuleContext<IEC61131Parser::Type_ruleContext>(0);
}


size_t IEC61131Parser::Pointer_typeContext::getRuleIndex() const {
  return IEC61131Parser::RulePointer_type;
}

void IEC61131Parser::Pointer_typeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPointer_type(this);
}

void IEC61131Parser::Pointer_typeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPointer_type(this);
}

IEC61131Parser::Pointer_typeContext* IEC61131Parser::pointer_type() {
  Pointer_typeContext *_localctx = _tracker.createInstance<Pointer_typeContext>(_ctx, getState());
  enterRule(_localctx, 10, IEC61131Parser::RulePointer_type);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(IEC61131Parser::T__13);
    setState(78);
    match(IEC61131Parser::T__14);
    setState(79);
    dynamic_cast<Pointer_typeContext *>(_localctx)->type = type_rule();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_declarationContext ------------------------------------------------------------------

IEC61131Parser::Variable_declarationContext::Variable_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> IEC61131Parser::Variable_declarationContext::ID() {
  return getTokens(IEC61131Parser::ID);
}

tree::TerminalNode* IEC61131Parser::Variable_declarationContext::ID(size_t i) {
  return getToken(IEC61131Parser::ID, i);
}

IEC61131Parser::Type_ruleContext* IEC61131Parser::Variable_declarationContext::type_rule() {
  return getRuleContext<IEC61131Parser::Type_ruleContext>(0);
}

IEC61131Parser::Variable_initializerContext* IEC61131Parser::Variable_declarationContext::variable_initializer() {
  return getRuleContext<IEC61131Parser::Variable_initializerContext>(0);
}


size_t IEC61131Parser::Variable_declarationContext::getRuleIndex() const {
  return IEC61131Parser::RuleVariable_declaration;
}

void IEC61131Parser::Variable_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable_declaration(this);
}

void IEC61131Parser::Variable_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable_declaration(this);
}

IEC61131Parser::Variable_declarationContext* IEC61131Parser::variable_declaration() {
  Variable_declarationContext *_localctx = _tracker.createInstance<Variable_declarationContext>(_ctx, getState());
  enterRule(_localctx, 12, IEC61131Parser::RuleVariable_declaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    dynamic_cast<Variable_declarationContext *>(_localctx)->idToken = match(IEC61131Parser::ID);
    dynamic_cast<Variable_declarationContext *>(_localctx)->names.push_back(dynamic_cast<Variable_declarationContext *>(_localctx)->idToken);
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == IEC61131Parser::T__9) {
      setState(82);
      match(IEC61131Parser::T__9);
      setState(83);
      dynamic_cast<Variable_declarationContext *>(_localctx)->idToken = match(IEC61131Parser::ID);
      dynamic_cast<Variable_declarationContext *>(_localctx)->names.push_back(dynamic_cast<Variable_declarationContext *>(_localctx)->idToken);
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(IEC61131Parser::T__15);
    setState(90);
    dynamic_cast<Variable_declarationContext *>(_localctx)->type = type_rule();
    setState(93);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == IEC61131Parser::T__16) {
      setState(91);
      match(IEC61131Parser::T__16);
      setState(92);
      dynamic_cast<Variable_declarationContext *>(_localctx)->initializer = variable_initializer();
    }
    setState(95);
    match(IEC61131Parser::T__17);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_initializerContext ------------------------------------------------------------------

IEC61131Parser::Variable_initializerContext::Variable_initializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IEC61131Parser::LiteralContext* IEC61131Parser::Variable_initializerContext::literal() {
  return getRuleContext<IEC61131Parser::LiteralContext>(0);
}


size_t IEC61131Parser::Variable_initializerContext::getRuleIndex() const {
  return IEC61131Parser::RuleVariable_initializer;
}

void IEC61131Parser::Variable_initializerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable_initializer(this);
}

void IEC61131Parser::Variable_initializerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable_initializer(this);
}

IEC61131Parser::Variable_initializerContext* IEC61131Parser::variable_initializer() {
  Variable_initializerContext *_localctx = _tracker.createInstance<Variable_initializerContext>(_ctx, getState());
  enterRule(_localctx, 14, IEC61131Parser::RuleVariable_initializer);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    literal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

IEC61131Parser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

IEC61131Parser::Numeric_literalContext* IEC61131Parser::LiteralContext::numeric_literal() {
  return getRuleContext<IEC61131Parser::Numeric_literalContext>(0);
}

IEC61131Parser::String_literalContext* IEC61131Parser::LiteralContext::string_literal() {
  return getRuleContext<IEC61131Parser::String_literalContext>(0);
}

IEC61131Parser::Boolean_literalContext* IEC61131Parser::LiteralContext::boolean_literal() {
  return getRuleContext<IEC61131Parser::Boolean_literalContext>(0);
}


size_t IEC61131Parser::LiteralContext::getRuleIndex() const {
  return IEC61131Parser::RuleLiteral;
}

void IEC61131Parser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}

void IEC61131Parser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<IEC61131Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}

IEC61131Parser::LiteralContext* IEC61131Parser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 16, IEC61131Parser::RuleLiteral);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case IEC61131Parser::T__20:
      case IEC61131Parser::Binary_literal:
      case IEC61131Parser::Octal_literal:
      case IEC61131Parser::Decimal_literal:
      case IEC61131Parser::Pure_decimal_digits:
      case IEC61131Parser::Hexadecimal_literal:
      case IEC61131Parser::Floating_point_literal: {
        enterOuterAlt(_localctx, 1);
        setState(99);
        numeric_literal();
        break;
      }

      case IEC61131Parser::Static_string_literal: {
        enterOuterAlt(_localctx, 2);
        setState(100);
        string_literal();
        break;
      }

      case IEC61131Parser::T__18:
      case IEC61131Parser::T__19: {
        enterOuterAlt(_localctx, 3);
        setState(101);
        boolean_literal();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Boolean_literalContext ------------------------------------------------------------------

IEC61131Parser::Boolean_literalContext::Boolean_literalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t IEC61131Parser::Boolean_literalContext::getRuleIndex() const {
  return IEC61131Parser::RuleBoolean_literal;
}
